--- a/MitosisTimesheet/src/main/webapp/html/levelMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/levelMaster.html
@@ -1,6 +1,6 @@
 <div ng-init="list()">
-<nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
-  <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid top-header-fixed">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -77,7 +77,14 @@
 </div>
 </div>
 <div class="container" style="width: 100%;">
-
+<div class="row len_show" style="padding: 20px;">
+<span>Show
+<select ng-model="numPerPage" >
+<option>15</option>
+<option>25</option>
+<option>35</option>
+<option>50</option>
+</select> Entries</span></div>
 <table class="table">
 	<thead class="thead-mit-ts">
 		<tr>
@@ -117,7 +124,7 @@
 				<span ng-show="showEdit"><input class="form-control" type="text" ng-model="sheet.hoursPerMonth" onkeypress="return isNumber(evt)" ></span>
 			</td>
 			 <td>
-				<span ng-show="!showEdit">{{sheet.numberOfEmployees}}</span>
+				<span ng-show="!showEdit" style="cursor: pointer;" ng-click="employeeDetails(sheet.level)" >{{sheet.numberOfEmployees}}</span>
 				<span ng-show="showEdit"><input class="form-control" type="text" ng-model="sheet.numberOfEmployees" onkeypress="return isNumber(evt)" readonly></span>
 			</td>
 			<td>
@@ -162,4 +169,9 @@
 </div>
  <div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
  <div class="alert-msg1 col-xs-12 col-sm-6"><p class="alert-danger"></p></div>
+ 
  </div>
+
+
+
+ 
