--- a/MitosisTimesheet/src/main/webapp/html/authority.html
+++ b/MitosisTimesheet/src/main/webapp/html/authority.html
@@ -1,8 +1,8 @@
 
 <div ng-init="list()">
 
-<nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
-  <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid top-header-fixed">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -31,6 +31,14 @@
 <div class="container" style="margin-top: 8%; margin-bottom: 2%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">User Rights</h2></div></div></div>
 
 <div  class="container" style="width: 100%;">
+<div class="row len_show" style="padding: 20px;">
+<span>Show
+<select ng-model="numPerPage" >
+<option>15</option>
+<option>25</option>
+<option>35</option>
+<option>50</option>
+</select> Entries</span></div>
 <div class="table-responsive">
 <table class="table" style="">
 	<thead class="thead-mit-ts" >
