--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -7,8 +7,8 @@
 <lable class="lb-username" ng-model="name">Welcome {{name}}</lable>
 </div> -->
 
-<nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
-  <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid top-header-fixed">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
