--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -66,9 +66,10 @@
     <div class="form-group">
       <label class="control-label col-sm-4 textleft" for="">Customer Name<span>:</span></label>
       <div class="col-sm-8">
-        <select  class="form-control empdet-form" ng-model="invoice.customer"  ng-options="item as item.customerName for item in customerList" required style="color: #777777;">
-	    <option value="">Customer Name</option>
-		</select> 
+        <select  class="form-control empdet-form" ng-model="invoice.customer"  ng-options="item as item.customerName for item in customerList" required style="color: #777777;" ng-change="loadProjects()">
+ 	    <option value="">Customer Name</option>
+ 		</select> 
+	    
       </div>
     </div>
     <div class="form-group">
@@ -104,7 +105,7 @@
     <div class="form-group">
       <label class="control-label col-sm-4 textleft">Invoice Amount<span>:</span></label>
       <div class="col-sm-8">          
-        <input type="text" class="form-control" ng-model="invoice.invoiceamt"  onkeypress="return isNumber(event)" id="" placeholder="">
+        <input type="text" class="form-control" ng-model="invoice.invoiceamt"  onkeypress="return isNumber(event)" id="" placeholder="" required ng-blur="sumCost()">
       </div>
     </div>
     <div class="form-group">
@@ -141,7 +142,7 @@
     </div>
     <div class="form-group">
  
-       <input class="form-control" ng-model="member.amount" onkeypress="return isNumber(event)" placeholder="Amount">
+       <input class="form-control" ng-model="member.amount" onkeypress="return isNumber(event)" placeholder="Amount" ng-blur="amountCalForinsert()">
     </div>
     
     <div class="form-group">        
