--- a/MitosisTimesheet/src/main/webapp/html/projectCost.html
+++ b/MitosisTimesheet/src/main/webapp/html/projectCost.html
@@ -107,14 +107,14 @@ $(document).ready(function () {
    	<div class="form-group">
       <label class="control-label col-sm-4 textleft">Cost<span>:</span></label>
       <div class="col-sm-8">
-        <input class="form-control" type="text" required placeholder="" ng-model="cost.projectCost">
+        <input class="form-control" type="text" id="costdet" placeholder="" ng-model="cost.projectCost">
       </div>
     </div>
     
     <div class="form-group">
     <label class="control-label col-sm-4 textleft">Currency<span>:</span></label>
 	    <div class="col-sm-8">
-	    <input class="form-control" required type="text" placeholder=""  ng-model="cost.currency">
+	    <input class="form-control" required type="text" placeholder=""  ng-model="cost.currencyCode">
 		</div>
     </div> 
     
@@ -172,7 +172,6 @@ $(document).ready(function () {
 </table>
 <div class="text-center" style="margin-top: 25px;">
 <button type="submit" class="btn btn-primary" ng-click="addProjectCostDetails()">Submit</button>
-<button class="btn btn-primary" ng-click="">Edit</button>
 </div>
  <div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
  <div class="alert-msg1 col-xs-12 col-sm-6"><p class="alert-danger"></p></div>
