--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -43,10 +43,9 @@
 	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 	<script src="js/datepicker.js" type="text/javascript"></script>
 	<script type="text/javascript" src="http://fgnass.github.io/spin.js/spin.min.js"></script>
-	<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>
     <script src="http://m-e-conroy.github.io/angular-dialog-service/javascripts/dialogs.min.js" type="text/javascript"></script>
-	
-     
+	<script type="text/javascript" src="js/angular/ui-bootstrap-tpls.min.js"></script> 
+    <!-- 	<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>   -->
 	<!-- end of angularjs  -->
 	
     <script src="js/app.js"></script>
