commit for changes

--- a/MitosisTimesheet/src/main/webapp/html/levelMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/levelMaster.html
@@ -183,7 +183,7 @@ $('.btn-ok').click(function(){
 
 
 <div class="emp-det-show">
-<h4 class="text-center">Employee Details</h4>
+<h4 class="text-center"><strong>Employee Details</strong></h4>
  <table class="table" style="margin-bottom: 10px;">
  				<thead>
 			    <tr>
