--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -135,14 +135,14 @@
 		</select>
     </div>
      <div class="form-group">
-       <input class="form-control" id="rateperhour"  onkeypress="return isNumber(event)"  ng-change="amountCalForinsert()"  ng-model="member.rateperhour" placeholder="Rate Per hour">
+       <input class="form-control" id="rateperhour"  onkeypress="return isNumber(event)"  ng-change="amountCalForinsert()"  ng-model="member.rateperhour" placeholder="Rate">
     </div>
     <div class="form-group">
        <input class="form-control" id="billablehour"  onkeypress="return isNumber(event)" ng-change="amountCalForinsert()"  ng-model="member.billablehours" placeholder="Billable hours">
     </div>
     <div class="form-group">
  
-       <input class="form-control" ng-model="member.amount" onkeypress="return isNumber(event)" placeholder="Amount" ng-blur="amountCalForinsert()">
+       <input class="form-control" ng-model="member.amount" onkeypress="return isNumber(event)" placeholder="Amount">
     </div>
     
     <div class="form-group">        
@@ -197,17 +197,17 @@
 			<td>
 				<span ng-show="!showEdit">{{sheet.rateperhour}}</span>
 				<span id="{{sheet.id}}" ng-show="showEdit"><input class="form-control" id="{{sheet.id}}" type="text" onkeypress="return isNumber(event)" ng-change="amountCalForUpdate(sheet)" ng-model="sheet.rateperhour"></span>
-				<span style="color:red" ng-show="sheet.rateperhour == '' || sheet.rateperhour == undefined">Required</span>
+			<!-- 	<span style="color:red" ng-show="sheet.rateperhour == '' || sheet.rateperhour == undefined">Required</span> -->
 			</td>
 			<td>
 				<span ng-show="!showEdit">{{sheet.billablehours}}</span>
 				<span id="{{sheet.id}}" ng-show="showEdit"><input class="form-control" id="{{sheet.id}}" type="text" onkeypress="return isNumber(event)" ng-change="amountCalForUpdate(sheet)" ng-model="sheet.billablehours"></span>
-				<span style="color:red" ng-show="sheet.billablehours == '' || sheet.billablehours == undefined">Required</span>
+			<!-- 	<span style="color:red" ng-show="sheet.billablehours == '' || sheet.billablehours == undefined">Required</span> -->
 			</td>
 			<td>
 				<span ng-show="!showEdit">{{sheet.amount}}</span>
 				<span id="{{sheet.id}}" ng-show="showEdit"><input class="form-control" id="{{sheet.id}}" type="text" onkeypress="return isNumber(event)" ng-model="sheet.amount"></span>
-				<span style="color:red" ng-show="sheet.amount == '' || sheet.amount == undefined">Required</span>
+				<!-- <span style="color:red" ng-show="sheet.amount == '' || sheet.amount == undefined">Required</span> -->
 			</td>
 			
 			<td style="word-spacing: 15px;">
