--- a/MitosisTimesheet/src/main/webapp/html/teamAssignment.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamAssignment.html
@@ -78,7 +78,9 @@
 </div>
 </div>
 <div  class="container" style="width: 100%;">
-<div class="row len_show" style="padding: 20px;">
+<div class="table-responsive">
+<div class="row">
+<div class="col-sm-6 len_show" style="padding: 20px;">
 <span>Show
 <select ng-model="numPerPage" >
 <option>15</option>
@@ -86,9 +88,9 @@
 <option>35</option>
 <option>50</option>
 </select> Entries</span></div>
-<div class="table-responsive">
-<div class="search-tab"> 
+<div class="col-sm-6 search-tab"> 
 	       <input type="text" id="search" required class="form-control" ng-change="filter()" ng-model="search" placeholder="Search"></input>
+</div>
 </div>
 <table class="table" style="">
 	<thead class="thead-mit-ts">
