--- a/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
@@ -84,7 +84,9 @@
 </div>
 </div>
 <div class="container" style="width: 100%;">
-<div class="row len_show" style="padding: 20px;">
+<div class="table-responsive">
+<div class="row">
+<div class="col-sm-6 len_show" style="padding: 20px;">
 <span>Show
 <select ng-model="numPerPage" >
 <option>15</option>
@@ -92,7 +94,10 @@
 <option>35</option>
 <option>50</option>
 </select> Entries</span></div>
-<div class="table-responsive">
+<div class="col-sm-6 search-tab"> 
+	       <input type="text" id="search" required class="form-control" ng-change="filter()" ng-model="search" placeholder="Search"></input>
+</div>
+</div>
 <table class="table">
 	<thead class="thead-mit-ts">
 		<tr>
@@ -110,7 +115,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="sheet in filteredParticipantsResults ">
+		<tr ng-repeat="sheet in filteredParticipantsResults=(employeeEntryList | filter:search) | startFrom:(currentPage-1)*maxSize | limitTo:maxSize" ">
 			<td>
 			   <span ng-show="!showEdit">{{sheet.employeeId}}</span>
 				<span ng-show="showEdit"><input class="form-control" ng-model="sheet.employeeId" style="color: #777777;">
