--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -111,7 +111,7 @@
     <div class="form-group">
       <label class="control-label col-sm-4 textleft">Currency<span>:</span></label>
       <div class="col-sm-8">          
-        <input type="text" class="form-control" ng-model="invoice.currency" id="" placeholder="">
+        <input type="text" class="form-control" ng-model="invoice.currency" id="" placeholder="" readonly>
       </div>
     </div>
     </div>
