--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -26,9 +26,8 @@
            <li><a ui-sref="company_info">Company Information</a></li>
           <li><a ui-sref="projectCostDetails">Project Cost </a></li>
             <li><a ui-sref="invoice">Invoice</a></li>
-            <!-- <li><a ui-sref="">Receipt</a></li>
-             <li><a ui-sref="">Bank Reconcile</a></li>
-              <li><a ui-sref="">Company Info</a></li> -->
+           <li><a ui-sref="customer_payment">Receipt</a></li>
+                 <!--   <li><a ui-sref="">Bank Reconcile</a></li>  -->
           </ul>
         </li>
           <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
