--- a/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
@@ -18,9 +18,8 @@
            <li><a ui-sref="company_info">Company Information</a></li>
           <li><a ui-sref="projectCostDetails">Project Cost </a></li>
            <li><a ui-sref="invoice">Invoice</a></li>
-         <!--  <li><a ui-sref="">Receipt</a></li>
-             <li><a ui-sref="">Bank Reconcile</a></li>
-              <li><a ui-sref="">Company Info</a></li> -->
+         <li><a ui-sref="customer_payment">Receipt</a></li>
+                 <!--   <li><a ui-sref="">Bank Reconcile</a></li>  -->
           </ul>
         </li>
           <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
@@ -115,7 +114,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="sheet in filteredParticipantsResults=(employeeEntryList | filter:search) | startFrom:(currentPage-1)*maxSize | limitTo:maxSize" ">
+		<tr ng-repeat="sheet in filteredParticipantsResults=(employeeEntryList | filter:search) | startFrom:(currentPage-1)*numPerPage | limitTo:numPerPage">
 			<td>
 			   <span ng-show="!showEdit">{{sheet.employeeId}}</span>
 				<span ng-show="showEdit"><input class="form-control" ng-model="sheet.employeeId" style="color: #777777;">
