--- a/MitosisTimesheet/src/main/webapp/html/projectCost.html
+++ b/MitosisTimesheet/src/main/webapp/html/projectCost.html
@@ -36,9 +36,8 @@ $(document).ready(function () {
            <li><a ui-sref="company_info">Company Information</a></li>
            <li><a ui-sref="projectCostDetails">Project Cost </a></li>
             <li><a ui-sref="invoice">Invoice</a></li>
-            <!-- <li><a ui-sref="">Receipt</a></li>
-             <li><a ui-sref="">Bank Reconcile</a></li>
-              <li><a ui-sref="">Company Info</a></li> -->
+         <li><a ui-sref="customer_payment">Receipt</a></li>
+                 <!--   <li><a ui-sref="">Bank Reconcile</a></li>  -->
           </ul>
         </li>
           <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
@@ -107,21 +106,21 @@ $(document).ready(function () {
    	<div class="form-group">
       <label class="control-label col-sm-4 textleft">Cost<span>:</span></label>
       <div class="col-sm-8">
-        <input class="form-control" type="text" id="costdet" placeholder="" ng-model="cost.projectCost">
+        <input class="form-control" type="text" id="costdet" onkeypress="return isNumber(event)" placeholder="" ng-model="cost.projectCost">
       </div>
     </div>
     
     <div class="form-group">
     <label class="control-label col-sm-4 textleft">Currency<span>:</span></label>
 	    <div class="col-sm-8">
-	    <input class="form-control" required type="text" placeholder=""  ng-model="cost.currencyCode">
+	    <input class="form-control" id="currency" required type="text" placeholder="" onkeypress="return ValidateAlpha(event)" ng-model="cost.currencyCode">
 		</div>
     </div> 
     
     <div class="form-group" id="hr-show">
     <label class="control-label col-sm-4 textleft">Rate<span>:</span></label>
 	    <div class="col-sm-8">
-	    <input class="form-control" type="text"  ng-model="cost.costOfEmp">
+	    <input class="form-control" id="rate" type="text" onkeypress="return isNumber(event)"  ng-model="cost.costOfEmp">
 		</div>
     </div> 
 	</div>
@@ -171,7 +170,7 @@ $(document).ready(function () {
 	</tbody>
 </table>
 <div class="text-center" style="margin-top: 25px;">
-<button type="submit" class="btn btn-primary" ng-click="addProjectCostDetails()">Submit</button>
+<button type="submit" id="addDet" class="btn btn-primary" ng-click="addProjectCostDetails()">Submit</button>
 </div>
  <div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
  <div class="alert-msg1 col-xs-12 col-sm-6"><p class="alert-danger"></p></div>
