commit for changes in menu

--- a/MitosisTimesheet/src/main/webapp/html/authority.html
+++ b/MitosisTimesheet/src/main/webapp/html/authority.html
@@ -49,8 +49,8 @@
 			<th>Finance</th>
 		    <th>Project</th>
 		    <th>Team</th>
-		    <th>Customer</th>
-		    <th>Employees</th>		    
+		    <th>Sales</th>
+		    <th>HR</th>		    
 		    <th></th>
 		</tr>
 	</thead>
