commit for issues in invoice and emp;loyee report

--- a/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
@@ -38,6 +38,7 @@
         <ul class="dropdown-menu">
             <li><a ui-sref="individualreport" >Individual Reports</a></li>
             <li><a ui-sref="teamreport">Team Reports</a></li>
+            <li><a ng-click="employeeReportController" ng-click="employeeDetailsReport()">Employee Reports</a></li>
           </ul>
         </li>
         </ul>      
