--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -36,7 +36,7 @@
 	<script type="text/javascript" src="js/angular/angular.min.js"></script>
 <!-- 	<script type="text/javascript" src="js/angular/angular-ui-router.min.js"></script> -->
 	<script type="text/javascript" src="js/angular/ngStorage.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js" ></script>
+	<script type="text/javascript" src="js/jquery/jquery-ui.js" ></script>
 	<script src="js/angular/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="js/jquery/jquery.edittable.js"></script>
 	<script data-require="ng-table@*" data-semver="0.3.1" src="js/angular/ng-table.js"></script>
