commit for employee reports

--- a/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
@@ -191,7 +191,7 @@
 <div class="form-group"> 
 	<button class="btn btn-primary" style="float: left;" ng-click="calculateAndUpdateExp()">Update Experience</button>
 	<span style="float: left; padding: 5px 0 0 15px; font-size: 18px;">Last Updated Date: {{asOnDate}}</span>
-
+	<span style="padding: 5px;"><img alt="" src="images/pdf-icon.png" ng-click="employeeDetailsReport()"/></span>
 </div> 
 </div>
 <div class="col-xs-12 col-md-6">
