--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -22,7 +22,7 @@
           <li><a ui-sref="projectCostDetails">Project Cost </a></li>
             <li><a ui-sref="invoice">Invoice</a></li>
           <li><a ui-sref="customer_payment">Receipt</a></li>
-                 <!--   <li><a ui-sref="">Bank Reconcile</a></li>  -->
+           <li><a ui-sref="bankReconcile">Bank Reconcile</a></li>  
           </ul>
         </li>
          <li ng-show="manageProject" ng-class="{ active: isActive('/projects')}"><a class="dropdown-toggle" data-toggle="dropdown"> Project<span class="caret"></span></a>
