--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -73,9 +73,8 @@
     <script src="js/controllers/customerpaymentController.js"></script>
     <script src="js/controllers/bankReconcileController.js"></script>
 </head>
-<body>
 <body ng-app="myApp" style="background: #f2f2f2;">
-
+<div ng-show="navbar" ng-include="'html/include.html'"></div>
 <div ui-view></div>
 </body>
 </html>
