commit for changes

--- a/MitosisTimesheet/src/main/webapp/html/bank_reconcile.html
+++ b/MitosisTimesheet/src/main/webapp/html/bank_reconcile.html
@@ -39,7 +39,7 @@
 	   <option value="">Select Receipt Number</option>
 		</select> 
       </div>
-    </div>z	
+    </div>	
     
     </div>
     
