--- a/MitosisTimesheet/src/main/webapp/html/include.html
+++ b/MitosisTimesheet/src/main/webapp/html/include.html
@@ -12,7 +12,7 @@
     });
     </script>
 
-<div ng-controller="accountController" ng-init="accountList()">
+<div ng-controller="includeController" ng-init="accountList()">
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid top-header-fixed">
     <div class="navbar-header">
