--- a/MitosisTimesheet/src/main/webapp/html/levelMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/levelMaster.html
@@ -136,7 +136,7 @@ $('.btn-ok').click(function(){
 
 
 <div class="emp-det-show">
-<h4 class="text-center popuph4"><strong>Employee Details</strong></h4>
+<h2 class="text-center popuph4"><strong>Employee Details</strong></h2>
  <table class="table popup" style="margin-bottom: 5px;">
  				<thead style="background: #C9D4D7;">
 			    <tr>
@@ -148,7 +148,7 @@ $('.btn-ok').click(function(){
         <tr>
         <td colspan="4">
         <div class="scrollit">
-            <table class="table-striped">
+            <table class="table-striped" style="width: 550px;">
              <tr ng-repeat="sheet in empDetList">
                 <td class="dettd"></td>
                 <td class="dettd">{{sheet.employeeId}}</td>
@@ -162,7 +162,7 @@ $('.btn-ok').click(function(){
 			    </tbody>
                 
                 </table>
-  				<button type="submit" style="float: right; margin-right: 30px;" class="btn-ok btn btn-primary btn-xs">Ok</button>
+  				<button type="submit" style="float: right; margin-right: 30px;" class="btn-ok btn btn-primary btn-sm">Ok</button>
  </div>
 <div class="overlay"></div>
  
