--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -72,6 +72,8 @@
     <script src="js/controllers/projectCostDetailsController.js"></script>
     <script src="js/controllers/customerpaymentController.js"></script>
     <script src="js/controllers/bankReconcileController.js"></script>
+     <script src="js/controllers/includeController.js"></script>
+    
 </head>
 <body ng-app="myApp" style="background: #f2f2f2;">
 <div ng-show="navbar" ng-include="'html/include.html'"></div>
