--- a/MitosisTimesheet/src/main/webapp/html/bank_reconcile.html
+++ b/MitosisTimesheet/src/main/webapp/html/bank_reconcile.html
@@ -90,7 +90,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-5 textleft">Amount Paid<span>:</span></label>
+      <label class="control-label col-sm-5 textleft">Receipt Amount<span>:</span></label>
       <div class="col-sm-7">          
         <span class="form-control" readonly>{{receiptDetails.invoiceHdr.paidAmount}}</span> 
       </div>
