--- a/MitosisTimesheet/src/main/webapp/html/teamAssignment.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamAssignment.html
@@ -1,5 +1,5 @@
 
-<div>
+<div ng-init="accessRights()">
 <div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">Team Assignment</h2></div></div></div>
 <div class="container" style="width: 100%;">
 <div class="teamassgn-form-div">
