--- a/MitosisTimesheet/src/main/webapp/html/authority.html
+++ b/MitosisTimesheet/src/main/webapp/html/authority.html
@@ -1,13 +1,13 @@
 <script type="text/javascript">
     $(document).ready(function() { 	   
         $(".cp").on("click", function(){ 
-            $("#acc_opt").toggle();
+            $(".acc_optcls").toggle();
         });    
     });
     $(document).on("click", function(event){    
     	var $trigger = $(".cp");
         if($trigger !== event.target && !$trigger.has(event.target).length){
-            $("#acc_opt").hide();
+            $(".acc_optcls").hide();
         } 
     });
 </script>
@@ -31,7 +31,7 @@
     <section class="jtr">
 		<span class="cp">
 		<img class="opt" style="height: 50px; width: 50px; border-radius: 50%;" src="images/profile/user.jpg"></img></span> 
-		<section id="acc_opt">
+		<section id="acc_opt" class="acc_optcls">
 		<span ng-model="name">{{name}}</span>
 		<a ui-sref="account">Account</a>
 		<a ng-click="logout();">Logout</a>
