--- a/MitosisTimesheet/src/main/webapp/html/leavereport.html
+++ b/MitosisTimesheet/src/main/webapp/html/leavereport.html
@@ -1,13 +1,13 @@
 <script type="text/javascript">
     $(document).ready(function() { 	   
         $(".cp").on("click", function(){ 
-            $("#acc_opt").toggle();
+            $(".acc_optcls").toggle();
         });    
     });
     $(document).on("click", function(event){    
     	var $trigger = $(".cp");
         if($trigger !== event.target && !$trigger.has(event.target).length){
-            $("#acc_opt").hide();
+            $(".acc_optcls").hide();
         } 
     });
 </script>
@@ -32,7 +32,7 @@
     <section class="jtr">
 		<span class="cp">
 		<img class="opt" style="height: 50px; width: 50px; border-radius: 50%;" src="images/profile/user.jpg"></img></span> 
-		<section id="acc_opt">
+		<section id="acc_opt" class="acc_optcls">
 		<span ng-model="name">{{name}}</span>
 		<a ui-sref="account">Account</a>
 		<a ng-click="logout();">Logout</a>
@@ -58,6 +58,9 @@
 	</div>
 	</div>
 	<div class="row" style="margin-top: 3%;">
+	<div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
+	<button type="submit" class="btn btn-primary btn-sm" ng-click="leaveSummaryReport()" style="width: 135px; font-size: 15px;">Summary Report</button>
+	</div>
 	<div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
 	<button type="submit" name="genertereport" class="btn btn-primary btn-sm" ng-click="leavereport()" style="width: 135px; font-size: 15px;">Generate Report</button>
 	</div>
