--- a/MitosisTimesheet/src/main/webapp/html/leavereport.html
+++ b/MitosisTimesheet/src/main/webapp/html/leavereport.html
@@ -19,10 +19,10 @@
 	</div>
 	<div class="row" style="margin-top: 3%;">
 	<div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
-	<button type="submit" class="btn btn-primary btn-sm" ng-click="leaveSummaryReport()" style="width: 135px; font-size: 15px;">Summary Report</button>
+	<button type="submit" class="btn btn-primary btn-sm" ng-click="leaveSummaryReport()" style="width: 135px; font-size: 15px;">Summary</button>
 	</div>
 	<div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
-	<button type="submit" name="genertereport" class="btn btn-primary btn-sm" ng-click="leavereport()" style="width: 135px; font-size: 15px;">Generate Report</button>
+	<button type="submit" name="genertereport" class="btn btn-primary btn-sm" ng-click="leavereport()" style="width: 135px; font-size: 15px;">Detail</button>
 	</div>
 	</div>
 	</form>
