--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -157,10 +157,10 @@
 			
 			<td style="word-spacing: 15px;">
 
-	            <a><span class="glyphicon glyphicon-pencil" ng-click="showEdit = !showEdit" ng-show="!showEdit"></span></a>
+	            <a><span class="glyphicon glyphicon-pencil" ng-click="showEdit = !showEdit;pencilClick(sheet)" ng-show="!showEdit"></span></a>
 				<a><span class="glyphicon glyphicon-remove" ng-click="deleteteammembers(sheet)" ng-show="!showEdit"></span></a>
 				<a><span class="glyphicon glyphicon-ok" ng-click="showEdit = !showEdit;updateteammembers(sheet)" ng-show="showEdit" ng-disabled="checkRequired(sheet);"></span></a> 
-				<a><span class="glyphicon glyphicon-ban-circle" ng-click="showEdit = !showEdit;teammemberslist()" ng-show="showEdit"></span></a> 			
+				<a><span class="glyphicon glyphicon-ban-circle" ng-click="showEdit = !showEdit;teammemberslist(sheet)" ng-show="showEdit"></span></a> 			
 			</td>
 		</tr>
 	</tbody>
