--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -13,8 +13,8 @@
 <!-- Css -->
 
 <link rel="stylesheet" href="css/ajax-loader.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/jquery-ui.css">
 <link rel="stylesheet" href="css/jquery.edittable.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="icon" type="image/png" href="images/mit_logo_new.png" />
@@ -22,13 +22,13 @@
 <!-- End Css -->
 
 <!--jquery  -->
-	
+		
 	<script type="text/javascript" src="js/jquery/jquery-1.10.1.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="js/jquery/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<!--end of jquery  -->
 	               
-       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+       <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
             
 	
 	<!-- angularjs  -->
@@ -40,10 +40,10 @@
 	<script src="js/angular/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="js/jquery/jquery.edittable.js"></script>
 	<script data-require="ng-table@*" data-semver="0.3.1" src="js/angular/ng-table.js"></script>
-	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
+	<!-- <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script> -->
 	<script src="js/datepicker.js" type="text/javascript"></script>
-	<script type="text/javascript" src="http://fgnass.github.io/spin.js/spin.min.js"></script>
-    <script src="http://m-e-conroy.github.io/angular-dialog-service/javascripts/dialogs.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="js/spin.min.js"></script>
+    <script src="js/dialogs.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/angular/ui-bootstrap-tpls.min.js"></script> 
     <!-- 	<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>   -->
 	<!-- end of angularjs  -->
